--- a/hw6/AAA._Python._Decorators_Rozhkova.ipynb
+++ b/hw6/AAA._Python._Decorators_Rozhkova.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "2c2dc3b0",
    "metadata": {},
    "outputs": [
@@ -29,7 +29,7 @@
        "17"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,17 +117,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "1b38d784-dd16-47fb-ba40-cf5efc526693",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
     "from datetime import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "732073b9",
    "metadata": {},
    "outputs": [],
@@ -136,18 +137,17 @@
     "\n",
     "def my_write(string_text):\n",
     "    if string_text not in (None, '\\n', ''):\n",
-    "        file = '[' + datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\") + ']: ' + string_text\n",
+    "        output_text = f'[{datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")}] {string_text}'\n",
     "    else:\n",
-    "        file = string_text\n",
-    "    original_write(file)\n",
-    "    return len(string_text)\n",
+    "        output_text = string_text\n",
+    "    return original_write(output_text)\n",
     "\n",
     "sys.stdout.write = my_write"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "d8f650f6",
    "metadata": {},
    "outputs": [
@@ -155,7 +155,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2022-11-24 12:46:16]: 1, 2, 3\n"
+      "[2022-11-24 17:17:09] 1, 2, 3\n"
      ]
     }
    ],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "37617332",
    "metadata": {},
    "outputs": [],
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61a8db04-da8e-4c51-a1fe-4509e4106174",
+   "id": "a12c3e1e-0b04-41c7-aeb0-0a0b79f38193",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "f7e0410b-5f56-4038-a643-eb6d5bd7746f",
    "metadata": {},
    "outputs": [],
@@ -223,27 +223,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "5804423b",
+   "execution_count": 6,
+   "id": "86765690-80b4-4e82-a022-8ada2d4873dc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def timed_output(function):\n",
-    "    def wrapper(input):\n",
-    "        old_stdout = sys.stdout\n",
-    "        sys.stdout = output = io.StringIO()\n",
-    "        function(input)\n",
-    "        res = output.getvalue()\n",
-    "        sys.stdout.close()\n",
-    "        file = '[' + datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\") + ']: ' + res\n",
-    "        sys.stdout = old_stdout\n",
-    "        return print(file)\n",
+    "# new\n",
+    "def timed_output(func):\n",
+    "    def wrapper(*args, **kwargs):\n",
+    "        original_write = sys.stdout.write\n",
+    "        sys.stdout.write = my_write\n",
+    "        func_result = func(*args, **kwargs)\n",
+    "        sys.stdout.write = original_write\n",
+    "        return func_result\n",
     "    return wrapper"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
+   "id": "5804423b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# old\n",
+    "def timed_output(func):\n",
+    "    def wrapper(func_input):\n",
+    "        old_stdout = sys.stdout\n",
+    "        sys.stdout = output = io.StringIO()\n",
+    "        func(func_input)\n",
+    "        func_output_text = output.getvalue()\n",
+    "        sys.stdout.close()\n",
+    "        output_text = f'[{datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")}] {func_output_text}'\n",
+    "        sys.stdout = old_stdout\n",
+    "        return print(output_text)\n",
+    "    return wrapper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "f43373a5",
    "metadata": {},
    "outputs": [],
@@ -255,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "6a2283db",
    "metadata": {},
    "outputs": [
@@ -263,8 +282,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2022-11-24 12:46:28]: Hello, Nikita!\n",
-      "\n"
+      "[2022-11-24 17:17:18] Hello, Nikita!\n"
      ]
     }
    ],
@@ -283,22 +301,6 @@
     "[2021-12-05 12:00:00]: Hello, Nikita!\n",
     "```"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1e94f964-8f56-4b77-84e9-6ec16e71a21f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "32699d2a-8e88-4a42-841c-2671950d413c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -322,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "de733186",
    "metadata": {},
    "outputs": [],
@@ -341,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "37e01742",
    "metadata": {},
    "outputs": [],
@@ -356,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "e892f124",
    "metadata": {},
    "outputs": [],
@@ -366,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "ac06c89e",
    "metadata": {},
    "outputs": [
